<resources>
    <string name="app_name">Virus Finder</string>
    <string name="skip">Skip</string>
    <string name="game_title">Virus Finder</string>
    <string name="author">by Zeti Xiong</string>
    <string name="congratulation">Congratulation!</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wining">You find out all the positive cases!</string>
    <string name="scanUse">Scan Used:</string>
    <string name="_0">0</string>
    <string name="positive_cases">Positive Cases:</string>
    <string name="slash">&#160;/&#160;</string>
    <string name="start">Start</string>
    <string name="option">Option</string>
    <string name="help">help</string>
    <string name="board_size_show">"%1$d&#160;X&#160;%2$d"</string>
    <string name="select_mine_number">Number of confirmed cases:</string>
    <string name="select_board_size">The size of relation map:</string>
    <string name="about_game">About Game</string>
    <string name="help_page_main">In this game, you are trying to find the confirmed positive
        case of COVID-19 among a bunch of people who are quarantine.\n\nThe people in the
        same row or column means the have meet each other recently. When you ask them, you
        can find out that they are positive case or how many positive cases they meet recently.
        Try to find all the positive cases!\n\nIn this game, fewer scans you use the better
        score you got. So, try use fewer scan when you finding the positive case. You can check
        your best score at option page.</string>
    <string name="help_page_cite">The earth with mask image come from:
        https://pixabay.com/vectors/virus-mask-coronavirus-disease-4999857/
        \nThe welcome page image from
        https://pixabay.com/photos/medicine-mask-coronavirus-doctor-5103043/
        \nLicence: https://pixabay.com/service/license/
        \n\nThe virus icon come from
        https://www.flaticon.com/free-icon/bacteria_2904134
        \nThe human icon come from:
        https://www.flaticon.com/free-icon/user_1077114
        \nThe trophy icon come from
        https://www.flaticon.com/free-icon/trophy_3593584
        \nLicence: https://www.freepikcompany.com/legal#nav-flaticon-agreement
        \n\nThe audio play in game made by JamKoo-Live</string>
    <string name="help_page_author">Author: Zeti Xiong\nCourse: CMPT276</string>
    <string name="website"><a href='https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home'
        >Course Website</a></string>
    <string name="num_played">You have played %1$d times and&#160;</string>
    <string name="no_best_score">there is no score yet.</string>
    <string name="best_score">the best score is %1$d scans.</string>
    <string name="remove_history">Remove History</string>
    <string name="win_page_current_scan">You used %1$d scans in this game.</string>
    <string name="win_page_best_score">&#160;The best score is %1$d</string>
    <string name="win_page_same_score">&#160;You are the best score!</string>
    <string name="theme_btn">Theme</string>
    <string name="copying_btn">COPYING</string>
    <string name="author_btn">Author</string>
    <string name="num_game_desc">You have played:</string>
    <string name="num_game">%1$d times</string>
    <string name="best_score_desc">Your best Score:</string>
    <string name="best_score_display">%1$d scans</string>
    <string name="no_best_score_short">not have yet</string>

</resources>